--- a/index.html
+++ b/index.html
@@ -497,6 +497,10 @@
                         <div class="col-md-12">
                           <textarea class="input-field input-border w-100" name="" id="" rows="5" placeholder="Message"></textarea>
                         </div>
+                        <div class="d-flex align-items-center justify-content-center my-4">
+                           <button type="button" class="btn btn-primary btn-width">Send a Message</button>
+                        </div>
+                       
                        
                       </div>
                     </form>
