--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             dolor sit amet consectetur adipisicing elit.</p>
             <div class="under-2"></div>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4 my-5">
+        <div class="row row-cols-1 row-cols-md-3  g-4 my-5 d-flex flex-wrap">
           <div class="col box-shadow">
-            <div class="card h-100 border border-0 padding-2 ">
+            <div class="card h-100 border border-0 padding-2 w-100  ">
               <div class="card-body">
-                <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
+                <div class="d-flex align-items-center justify-content-center my-3 border-rounded  icon mx-auto">
                   <i class="fa-solid fa-briefcase fa-3x " style="color: #595959;"></i>
                 </div>
                 
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="col box-shadow ">
-            <div class="card h-100 border border-0">
+            <div class="card h-100 border border-0 padding-2 w-100">
               <div class="card-body  ">
                 <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
                   <i class="fa-regular fa-address-card fa-3x" style="color: #595959;"></i>
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div class="col box-shadow ">
-            <div class="card h-100 border border-0">
+            <div class="card h-100 border border-0 padding-2 w-100">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
                   <i class="fa-solid fa-chart-simple fa-3x" style="color: #595959;"></i>
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="col box-shadow">
-            <div class="card h-100 border border-0">
+            <div class="card h-100 border border-0 padding-2 w-100">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
                   <i class="fa-solid fa-binoculars fa-3x" style="color: #595959;"></i>
@@ -196,7 +196,7 @@
             </div>
           </div>
           <div class="col box-shadow">
-            <div class="card h-100 border border-0">
+            <div class="card h-100 border border-0 padding-2 w-100">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
                   <i class="fa-regular fa-sun fa-3x" style="color: #595959;"></i>
@@ -211,7 +211,7 @@
             </div>
           </div>
           <div class="col box-shadow">
-            <div class="card h-100 border border-0">
+            <div class="card h-100 border border-0 padding-2 w-100">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-center my-3 border-rounded icon mx-auto">
                   <i class="fa-regular fa-calendar fa-3x" style="color:#595959;"></i>
