--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
               </button>
               <div class="  collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
                 <ul class="  navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light " aria-current="page" href="#">HOME</a>
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light " aria-current="page" href="#home">HOME</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light" aria-current="page" href="#">ABOUT
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light" aria-current="page" href="#about">ABOUT
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light " aria-current="page" href="#">SERVICES
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light " aria-current="page" href="#services">SERVICES
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light " aria-current="page" href="#">WORK
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light " aria-current="page" href="#work">WORK
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light" href="#">BLOG
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light" href="#blog">BLOG
                     </a>
                   </li>
                   <li class="nav-item dropdown">
@@ -54,8 +54,8 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link p-3 text-light" href="#">CONTACT</a>
+                  <li class="nav-item position-relative">
+                    <a class="nav-link p-3 text-light" href="#contact">CONTACT</a>
                   </li>
                   
                 </ul>
@@ -63,8 +63,8 @@
             </div>
           </nav>
     </header>
-    <section>
-        <div class="hero hero-img d-flex justify-content-center align-items-center">
+    <section >
+        <div class="hero hero-img d-flex justify-content-center align-items-center" id="home">
             <div >
                 <h1 class=" font-size my-5 text-center mx-4 ">I am Morgan Freeman</h1>
                 <div class="text w-100 d-flex justify-content-center align-items-center">
@@ -76,7 +76,7 @@
             </div>
         </div>
     </section>
-    <section class="back-color p-2 ">
+    <section class="back-color p-2 " id="about">
         <div class="container p-1 my-2 res-padding">
             <div class="container">
                 <div class="row bg-light shadow p-3">
@@ -126,7 +126,7 @@
         </div>
         </div>
     </section>
-    <section class="back-color ">
+    <section class="back-color" id="services">
       <div class="container ">
         <div class="text-center pos">
           <h1 class="font-size48 fw-bold">SERVICES</h1>
@@ -231,7 +231,7 @@
 
     </section>
     <section>
-      <div class="hero-2 p-5 d-flex justify-content-center align-items-center flex-wrap">
+      <div class="hero-2 p-5 d-flex justify-content-center align-items-center flex-wrap" id="work">
         <div class="overlay"></div>
         <div class=" blue-1 p-2 d-flex justify-content-around align-items-center   position-relative ">
           <div class="row text-white d-flex justify-content-center align-items-center mx-auto ">
@@ -408,7 +408,7 @@
               </div>
           
             </section>
-            <section class="back-color p-3">
+            <section class="back-color p-3" id="blog">
               <div class="container ">
                 <div class="text-center pos">
                   <h1 class="font-size48 fw-bold">BLOG</h1>
@@ -468,7 +468,7 @@
                 </div>
               </div>
             </section>
-            <section class="shadow">
+            <section class="shadow" id="contact">
               <div class="hero-5 padding-contact d-flex justify-content-center align-items-center flex-wrap">
                 <div class="overlay"></div>
                 <div class="container row padding-4 bg-white position-relative ">
